--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <img src="/pictures/logo.png" alt="نشأ Logo"> <!-- Replace with your logo path -->
+        <img src="pictures/logo.png" alt="نشأ Logo"> <!-- Replace with your logo path -->
         <div class="contact-info">
             <p>رقم الواتساب: <a href="https://wa.me/+201064037765" target="_blank">+20 106 403 7765</a></p>
             <p>الدورات الدراسيه</p>
