--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
 
         <div class="image-container">
-            <img src="childMain.jpg" alt="Interactive Image"> <!-- Replace with your image path -->
+            <img src="/childMain.jpg" alt="Interactive Image"> <!-- Replace with your image path -->
         </div>
 
         <h1>طرق الدراسة</h1>
